--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -23,7 +23,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Fetch Config
-        run: curl https://docs.renovatebot.com/renovate-schema.json -O schema.json
+        run: curl https://docs.renovatebot.com/renovate-schema.json -o schema.json
 
       # Runs a set of commands using the runners shell
       - name: Commit Changes
