--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -34,7 +34,7 @@ jobs:
           git config --local user.name "mokiy-actions[bot]"
       - name: Commit Changes
         run: |
-          echo "git commit -m \"chore: Update Renovate Schema\" -a\nexit 0" > commit.sh
+          echo -e "git commit -m \"chore: Update Renovate Schema\" -a\nexit 0" > commit.sh
           chmod +x commit.sh
           ./commit.sh
           rm commit.sh
