--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -5,7 +5,7 @@ name: Fetch Config
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 */6 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
